Fixes possible performance problem with conversion to par collection and indexed access to list